# x-lang-proto

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vitest.config.ts  x-semantic-api.md
.github/workflows/: ci.yml  release.yml
_poc/: ANALYSIS.md  package-lock.json  tsconfig.json
_poc/effect-lang/: BENCHMARK_RESULTS.md  Cargo.toml  LSP_ARCHITECTURE.md  MODULE_SYSTEM.md  TESTING_GUIDE.md  TEST_GUIDE.md  test_simple.wasm  (+1 more)
benches/: parser_bench.rs  type_checker_bench.rs
docs/: 00-quick-start.md  brace-first-syntax.md  do-notation-design.md  dual-syntax-design.md  effect-type-checking.md  extensible-effects-design.md  git-like-namespace-system.md  minimal-syntax-design.md  module-shorthand-syntax.md  namespace-usage-example.md  optional-parentheses.md  overview.md  result-based-error-handling.md  unified-effect-syntax.md  unison-style-syntax.md  with-handler-design.md
effect-lang/: Cargo.toml  DESIGN.md  Makefile  test_pipeline_example.md  test_simple.wat
effect-lang-checker/: Cargo.toml
effect-lang-checker/src/: checker.rs  constraints.rs  error_reporting.rs  lib.rs  resolver.rs  unification.rs
effect-lang-compiler/: Cargo.toml
effect-lang-compiler/src/: backend.rs  config.rs  lib.rs  pipeline.rs  wasm_component.rs  wasm_gc.rs
effect-lang-editor/: Cargo.toml
effect-lang-editor/src/: ast_editor.rs  incremental.rs  language_service.rs  lib.rs  operations.rs  query.rs  session.rs  validation.rs
effect-lang-parser/: Cargo.toml
effect-lang-parser/src/: ast.rs  binary.rs  lexer.rs  lib.rs  parser.rs  token.rs
effect-lang-parser/src/syntax/: haskell.rs  mod.rs  ocaml.rs  sexp.rs
effect-lang/benches/: performance_bench.rs
effect-lang/examples/: README.md  advanced.haskell.eff  advanced.ocaml.eff  advanced.rust.eff  advanced.sexp.eff  basic.haskell.eff  basic.ocaml.eff  basic.sexp.eff  component_demo.eff  effects.haskell.eff  test_minimal.eff  wasm_interface.sexp.eff
effect-lang/src/: lib.rs
effect-lang/src/analysis/: effects.rs  inference.rs  lexer.rs  mod.rs  parser.rs  types.rs
effect-lang/src/bin_disabled/: cli.rs  compiler.rs  lsp.rs
effect-lang/src/codegen/: ir.rs  mod.rs  typescript.rs  wit_backend.rs
effect-lang/src/core/: ast.rs  binary.rs  diff.rs  mod.rs  symbol.rs  token.rs
effect-lang/tests/: binary_tests.rs  binary_type_checker_tests.rs  complete_type_tests.rs  diff_tests.rs  integration_tests.rs  lexer_tests.rs  minimal_recursive_test.rs  parser_tests.rs  pipeline_tests.rs  runtime_execution_tests.rs  symbol_tests.rs  type_checker_tests.rs  visibility_tests.rs  wasm_runtime_tests.rs
examples/: README.md  array_literal_test.x  binary_tree.x  complex1.sexp  dependency_demo.x  dependency_demo_arrow.x  dependency_demo_fn.x  dependency_demo_simple.x  example2.sexp  hello.x  hello_builtin.x  hello_world.x  list_demo.x  list_literal_only.x  list_literal_test.x  list_operations.x  list_test.x  math.x  math_documented.x  record_adt_test.x  simple_adt_test.x  simple_list.x  simple_list_literal.x  simple_test.x  state_effect.x  test_builtin.x  test_deps.x  test_fn_simple.x  test_let_in.x  test_let_simple.x  test_list.x  test_simple_deps.x  tuple_literal_test.x
experiments/: debug_discovery.rs  dijkstra-demo.rs  test-annotated-ast.rs  test-content-addressing.rs  test-discovery-debug.rs  test-incremental-type-check.rs  test-namespace-v2.rs  test-namespace.rs  test-runner-demo.rs  test-tree-similarity.rs  test_helpers.rs
git-integration/: install.sh
rust-sexp-diff/: Cargo.toml
rust-sexp-diff/benches/: sexp_bench.rs
rust-sexp-diff/examples/: complex.s
rust-sexp-diff/src/: error.rs  lib.rs  parser.rs  serializer.rs
scripts/: analyze.ts  check.ts  quick-analysis.ts
src/: cli.ts  index.ts  renderer.ts  serializer.ts
test/: test.ts
test-project/: Cargo.toml  sample.x
test1/: .gitignore  README.md  main.x  x-lang.toml
tests/: dijkstra_simple.x
unison/: comparison.u
x-ai-codegen/: Cargo.toml
x-ai-codegen/src/: context.rs  generator.rs  intent.rs  lib.rs  refiner.rs  session.rs  validator.rs
x-ast-builder/: Cargo.toml
x-ast-builder/examples/: ast_construction.rs  ast_transformation.rs  code_generator.rs  simple_ast_demo.rs
x-ast-builder/src/: builder.rs  dsl.rs  expr_builder.rs  lib.rs
x-checker/: Cargo.toml
x-cli/: Cargo.toml
x-cli/src/: config.rs  format.rs  interactive.rs  main.rs  utils.rs  version_db.rs
x-cli/src/commands/: check.rs  compile.rs  convert.rs  doc.rs  edit.rs  extract.rs  hash.rs  imports.rs  lsp.rs  mod.rs  namespace.rs  namespace_cli.rs  new.rs  outdated.rs  query.rs  repl.rs  resolve.rs  shell.rs  show.rs  stats.rs  test.rs  test_helpers.rs  version.rs
x-compiler/: Cargo.toml
x-compiler/src/: backend.rs  codegen_mod.rs  config.rs  ir.rs  lib.rs  mod.rs  pipeline.rs  typescript.rs  utils.rs  wasm_component.rs  wasm_gc.rs  wit.rs  wit_backend.rs
x-editor/: Cargo.toml
x-editor/src/: annotated_ast.rs  ast_editor.rs  ast_engine.rs  content_addressing.rs  incremental.rs  index_system.rs  language_service.rs  lib.rs  namespace.rs  namespace_resolver.rs  namespace_storage.rs  operations.rs  query.rs  session.rs  tree_similarity.rs  validation.rs
x-lang-checker/: Cargo.toml
x-lang-compiler/: Cargo.toml
x-lang-compiler/src/: config.rs  lib.rs  pipeline.rs  utils.rs  wasm_gc.rs
x-lang-editor/: Cargo.toml
x-lang-editor/src/: ast_editor.rs  incremental.rs  language_service.rs  lib.rs  operations.rs  query.rs  session.rs
x-lang-parser/: Cargo.toml
x-parser/: Cargo.toml
x-parser/src/: ast.rs  binary.rs  binary_tests.rs  content_hash.rs  dependency.rs  dual_syntax_parser.rs  error.rs  lexer.rs  lib.rs  metadata.rs  minimal_ast.rs  module_shorthand_function_test.rs  module_shorthand_test.rs  optional_parentheses_test.rs  parser.rs  persistent_ast.rs  semantic_ast.rs  signature.rs  span.rs  symbol.rs  token.rs  unison_style_parser.rs  versioning.rs
x-parser/src/syntax/: converter.rs  haskell.rs  mod.rs  ocaml.rs  printer.rs  rust_like.rs  sexp.rs
x-testing/: Cargo.toml
x-testing/src/: lib.rs  test_cache.rs  test_discovery.rs  test_report.rs  test_runner.rs
(+144 files in other folders)
