[workspace]
members = [
    "x-parser",
    "x-checker", 
    "x-compiler",
    "x-editor",
]
resolver = "2"

[workspace.dependencies]
# Core language dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Parsing and analysis
tree-sitter = "0.20"
rowan = "0.15"
salsa = "0.16"

# Type checking and effects
ena = "0.14"
petgraph = "0.6"
bitflags = "2.0"

# CLI and async
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# LSP support
lsp-server = "0.7"
lsp-types = "0.94"
tower-lsp = "0.20"

# Utilities
dashmap = "5.0"
im = "15.0"
once_cell = "1.0"
toml = "0.8"
sha2 = "0.10"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Dev dependencies
tokio-test = "0.4"
tower-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true