[workspace]
members = [
    "x-parser",
    "x-checker", 
    "x-compiler",
    "x-editor",
    "x-cli",
    "x-ast-builder",
    "x-ai-codegen",
    "x-testing",
    "test-project",
]
resolver = "2"

[package]
name = "x-lang"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "test-incremental-type-check"
# path = "test-incremental-type-check.rs"

# [[bin]]
# name = "test-content-addressing"
# path = "test-content-addressing.rs"

# [[bin]]
# name = "test-tree-similarity"
# path = "test-tree-similarity.rs"

# [[bin]]
# name = "test-annotated-ast"
# path = "test-annotated-ast.rs"

# [[bin]]
# name = "test-namespace"
# path = "test-namespace.rs"

# [[bin]]
# name = "test-namespace-v2"
# path = "test-namespace-v2.rs"

# [[bin]]
# name = "test-runner-demo"
# path = "test-runner-demo.rs"

# [[bin]]
# name = "dijkstra-demo"
# path = "dijkstra-demo.rs"

# [[bin]]
# name = "test-discovery-debug"
# path = "test-discovery-debug.rs"

[dependencies]
x-parser = { path = "x-parser" }
x-checker = { path = "x-checker" }
x-editor = { path = "x-editor" }
x-testing = { path = "x-testing" }
x-cli = { path = "x-cli" }
anyhow = { workspace = true }
tempfile = { workspace = true }

[workspace.dependencies]
# Core language dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Parsing and analysis
tree-sitter = "0.20"
rowan = "0.15"
salsa = "0.16"

# Type checking and effects
ena = "0.14"
petgraph = "0.6"
bitflags = "2.0"

# CLI and async
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# LSP support
lsp-server = "0.7"
lsp-types = "0.94"
tower-lsp = "0.20"

# Utilities
dashmap = "5.0"
im = "15.0"
once_cell = "1.0"
toml = "0.8"
sha2 = "0.10"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Dev dependencies
tokio-test = "0.4"
tower-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
