[workspace]
members = [
  "x-parser",
  "x-checker",
  "x-compiler",
  "x-editor",
  "x-cli",
  "x-ast-builder",
  "x-ai-codegen",
  "x-testing",
]
resolver = "2"

[package]
edition = "2021"
name = "x-lang"
version = "0.1.0"

# [[bin]]
# name = "test-incremental-type-check"
# path = "test-incremental-type-check.rs"

# [[bin]]
# name = "test-content-addressing"
# path = "test-content-addressing.rs"

# [[bin]]
# name = "test-tree-similarity"
# path = "test-tree-similarity.rs"

# [[bin]]
# name = "test-annotated-ast"
# path = "test-annotated-ast.rs"

# [[bin]]
# name = "test-namespace"
# path = "test-namespace.rs"

# [[bin]]
# name = "test-namespace-v2"
# path = "test-namespace-v2.rs"

# [[bin]]
# name = "test-runner-demo"
# path = "test-runner-demo.rs"

# [[bin]]
# name = "dijkstra-demo"
# path = "dijkstra-demo.rs"

# [[bin]]
# name = "test-discovery-debug"
# path = "test-discovery-debug.rs"

[dependencies]
anyhow = {workspace = true}
tempfile = {workspace = true}
x-checker = {path = "x-checker"}
x-cli = {path = "x-cli"}
x-editor = {path = "x-editor"}
x-parser = {path = "x-parser"}
x-testing = {path = "x-testing"}

[dev-dependencies]
criterion = {workspace = true}

[workspace.dependencies]
# Core language dependencies
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Parsing and analysis
rowan = "0.15"
salsa = "0.16"
tree-sitter = "0.20"

# Type checking and effects
bitflags = "2.0"
ena = "0.14"
petgraph = "0.6"

# CLI and async
clap = {version = "4.0", features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}

# LSP support
lsp-server = "0.7"
lsp-types = "0.94"
tower-lsp = "0.20"

# Utilities
dashmap = "5.0"
im = "15.0"
once_cell = "1.0"
sha2 = "0.10"
toml = "0.8"
uuid = {version = "1.8", features = ["v4", "serde"]}

# Dev dependencies
criterion = {version = "0.5", features = ["html_reports"]}
tempfile = "3.0"
tokio-test = "0.4"
tower-test = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
