[package]
name = "effect-lang-checker"
version = "0.1.0"
edition = "2021"
authors = ["mizchi"]
description = "Type checker and semantic analyzer for EffectLang with effect system support"
license = "MIT"

[dependencies]
# Local dependencies
effect-lang-parser = { path = "../effect-lang-parser" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
salsa = { workspace = true }
ena = { workspace = true }
petgraph = { workspace = true }
dashmap = { workspace = true }
im = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

