[package]
name = "effect-lang-compiler"
version = "0.1.0"
edition = "2021"
authors = ["mizchi"]
description = "Code generation and compilation backend for EffectLang with multi-target support"
license = "MIT"

[[bin]]
name = "effect-lang"
path = "src/bin/cli.rs"

[dependencies]
# Local dependencies
effect-lang-parser = { path = "../effect-lang-parser" }
effect-lang-checker = { path = "../effect-lang-checker" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

# Additional dependencies for code generation
toml = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

