[package]
name = "effect-lang-parser"
version = "0.1.0"
edition = "2021"
authors = ["mizchi"]
description = "Parser and lexer for EffectLang - handles text to AST conversion with multi-syntax support"
license = "MIT"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
rowan = { workspace = true }
bitflags = { workspace = true }
once_cell = { workspace = true }
lsp-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

