[package]
name = "effect-lang"
version = "0.1.0"
edition = "2021"
authors = ["mizchi"]
description = "Effect system functional programming language with LSP-first design"
license = "MIT"

[[bin]]
name = "effect-lsp"
path = "src/bin/lsp.rs"

[[bin]]
name = "effect-cli"
path = "src/bin/cli.rs"

[dependencies]
# LSP and JSON-RPC
lsp-server = "0.7"
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing and analysis
tree-sitter = "0.20"
rowan = "0.15"  # Red-green tree for incremental parsing
salsa = "0.16"  # Incremental computation framework

# Async runtime for LSP
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.0"  # Concurrent HashMap
im = "15.0"      # Persistent data structures
once_cell = "1.0"
toml = "0.8"     # TOML parsing
sha2 = "0.10"    # Cryptographic hashing

# Type checking and effects
ena = "0.14"     # Union-find for unification
petgraph = "0.6" # Graph algorithms

[dev-dependencies]
tokio-test = "0.4"
tower-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = "1.0"

[[bench]]
name = "performance_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true