[package]
name = "x-lang-compiler"
version = "0.1.0"
edition = "2021"
authors = ["mizchi"]
description = "Code generation and compilation backend for x Language with multi-target support"
license = "MIT"

[[bin]]
name = "x-lang"
path = "src/bin/cli.rs"

[dependencies]
# Local dependencies
x-lang-parser = { path = "../x-lang-parser" }
x-lang-checker = { path = "../x-lang-checker" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

# Additional dependencies for code generation
toml = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

